--- a/views/food.ejs
+++ b/views/food.ejs
@@ -16,6 +16,6 @@
     </div>
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAjF4bqBu5j4eX7WU_EUnvlFRTkvs8iLac&libraries=places"></script>
-<script src="../js/recs.js"></script>
+<script src="../public/js/recs.js"></script>
 </body>
 </html>
