--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,13 +1,10 @@
-<!DOCTYPE html>
-<html lang="en" >
+<!doctype html>
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title></title>
-  <link rel="stylesheet" href="Admin/css/st_login.css">
-<!-- partial:index.partial.html -->
-<script  src="https://code.jquery.com/jquery-3.1.1.min.js"  crossorigin="er-robin"></script>
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" ></script>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"  crossorigin="er-robin">
+    <title>My Travel App</title>
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div class="container">
