--- a/views/trip.ejs
+++ b/views/trip.ejs
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 <div class="container">
 
@@ -56,7 +57,7 @@
         </div>
 </div>
 
-<script src="../main.js"></script>
+<script src="../public/main.js"></script>
 
 </body>
 </html>
